--- a/content/help.html
+++ b/content/help.html
@@ -183,6 +183,8 @@ both filter are effective.
 
 <h3>Version history</h3>
 <ul><li>
+Version 0.8: ???
+</li><li>
 Version 0.7: Added 'status/is' search. Added 'before/after' search. Added numerical calculation.
 </li><li>
 Version 0.6: Added Help & Contact link to Options dialog.
@@ -196,6 +198,13 @@ Version 0.3: Shift+Enter to launch gloda search. Fix 'Cc','Cu','Ci','Cr' redefin
 Version 0.2: Added 'g:' search mode for gloda search. Press 'Esc' in thread tree will clear the search criteria.
 </li><li>
 Version 0.1: First version, changed from GMailUI to make it works for Thunderbird 3.
+</li></ul>
+
+<h3>Known Issues of this extension or Thunderbird</h3>
+<ul><li>
+<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=124641'>Bug 124641</a> - Thunderbird does not handle multi-line headers correctly when search term spans lines
+</li><li>
+<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=338761'>Bug 338761</a> - searching body of emails for text doesn't match word-wrapped text 
 </li></ul>
 
 <h3>Feedback, Suggestions, and on-going Development</h3>
