--- a/content/help.html
+++ b/content/help.html
@@ -184,6 +184,7 @@ both filter are effective.
 
 <h3>Click 2 Search</h3>
 
+<a name="c2s_Replace"></a>
 <pre>Replace subject before search.
 Multiple matches are ORed. Example:
     Match:   \[#(\d*)\]
