--- a/content/help.html
+++ b/content/help.html
@@ -138,7 +138,8 @@ by editing properties, or can be renamed to make it a permanent virtual search f
 If you do not rename the folder, the next time you use ctrl-enter the ExpressionSearch 
 virtual folder is reused to show your new quick search result.</p>
 
-<p>The option "Keep selected folders for saved search" to have the "ExpressionSearch"
+<a name='keep_saved_search'/>
+<p>The option "<b>Keep selected folders for saved search</b>" to have the "ExpressionSearch"
 virtual folder being persistent not only allows you to mark it as "Preferred" without
 the setting being lost when restarting TB, but also you can edit the properties of the
 "ExpressionSearch" virtual folder to specify once for all which of your physical folders
@@ -216,12 +217,16 @@ Version 0.1: First version, changed from GMailUI to make it works for Thunderbir
 <ul><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=124641'>Bug 124641</a> - Thunderbird does not handle multi-line headers correctly when search term spans lines
 </li><li>
-<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=338761'>Bug 338761</a> - searching body of emails for text doesn't match word-wrapped text 
+<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=338761'>Bug 338761</a> - searching body of emails for text doesn't match word-wrapped text
+</li><li>
+<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=564328'>Bug 564328</a> - Keyboard shortcut Ctrl+F conflict and cmd_find ambiguity, used for both Find in This Message and Quick Filter 
+</li><li>
+<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=625472'>Bug 625472</a> - Quick search processes input after hiding it with escape
 </li></ul>
 
 <h3>Feedback, Suggestions, and on-going Development</h3>
 <p>Please send email to <a href='mailto:Opera.Wang+es@gmail.com'>Opera.Wang+es@gmail.com</a> for feedback, suggetions etc</p>
-<p>Compared with original GMailUI, these features are still missing:
+<p>Compared with original GMailUI 0.6, these features are still missing:
 <ul>
 <li>Use 'Y' to archive selected mail to archive folder</li>
 <li>Use J/K to move messages up and down, and Ctrl+J to mark a message as junk</li>
