no need to restart if change move2bar option

--- a/content/help.html
+++ b/content/help.html
@@ -240,7 +240,7 @@ savo_msu - Author of <a href='https://addons.mozilla.org/af/thunderbird/addon/on
 </li><li>
 Olivier - Suggest for Shift/Ctrl+Enter
 </li><li>
-Tom Zhu - Suggest for Enter to focus message pane
+Tom Zhu - Suggest for Enter to focus message pane, and validations before release.
 </li></ul>
 
 <h3>Feedback, Suggestions, and on-going Development</h3>
