save, for filterbar, not finished.

--- a/content/help.html
+++ b/content/help.html
@@ -229,6 +229,8 @@ Version 0.1: First version, changed from GMailUI to make it works for Thunderbir
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=564328'>Bug 564328</a> - Keyboard shortcut Ctrl+F conflict and cmd_find ambiguity, used for both Find in This Message and Quick Filter 
 </li><li>
+<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=607295'>Bug 607295</a> - Provide UI for new archive granularity and folder structure options
+</li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=625472'>Bug 625472</a> - Quick search processes input after hiding it with escape
 </li></ul>
 
@@ -248,9 +250,9 @@ Tom Zhu - Suggest for Enter to focus message pane, and validations before releas
 <p>Please send email to <a href='mailto:Opera.Wang+es@gmail.com'>Opera.Wang+es@gmail.com</a> for feedback, suggetions etc</p>
 <p>Compared with original GMailUI 0.6, these features are still missing:
 <ul>
-<li>Use 'Y' to archive selected mail to archive folder</li>
-<li>Use J/K to move messages up and down, and Ctrl+J to mark a message as junk</li>
-<li>Key '/' focuses on the quick search bar</li>
+<li>Use 'Y' to archive selected mail to archive folder (use 'a')</li>
+<li>Use J/K to move messages up and down, and Ctrl+J to mark a message as junk (conflict with builtin key mapping, use 'f/b' instead)</li>
+<li>Key '/' focuses on the quick search bar (use Ctrl+F)</li>
 </ul>
 </p>
 <br />
