firstRunAction fix log term charset issue try to add one customer filter

--- a/content/help.html
+++ b/content/help.html
@@ -242,6 +242,8 @@ savo_msu - Author of <a href='https://addons.mozilla.org/af/thunderbird/addon/on
 </li><li>
 Olivier - Suggest for Shift/Ctrl+Enter
 </li><li>
+Kent James - Author of <a href='https://addons.mozilla.org/en-US/thunderbird/addon/filtaquilla/'>FiltaQuilla</a>
+</li><li>
 Tom Zhu - Suggest for Enter to focus message pane, and validations before release.
 </li></ul>
 
