add search by att name, failed ;-(

--- a/content/help.html
+++ b/content/help.html
@@ -241,9 +241,11 @@ Version 0.2: Added 'g:' search mode for gloda search. Press 'Esc' in thread tree
 Version 0.1: First version, changed from GMailUI to make it works for Thunderbird 3.
 </li></ul>
 
-<h3>Known Issues of this extension or Thunderbird</h3>
+<h3>Known Issues of Thunderbird</h3>
 <ul><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=124641'>Bug 124641</a> - Thunderbird does not handle multi-line headers correctly when search term spans lines
+</li><li>
+<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=224392'>Bug 224392</a> - Add ability to filter by attachment name (extension)
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=338761'>Bug 338761</a> - searching body of emails for text doesn't match word-wrapped text
 </li><li>
