--- a/content/help.html
+++ b/content/help.html
@@ -65,7 +65,7 @@ in the <i>subject</i> fields of the message.
 <b>simple:this subject contains special characters like ( ) ' " - etc</b>
 </p>
 <p>This expression searches all messages in the current folder or view in the <i>subject</i>
-fields of the message. And the pattern can contain special characters.
+fields of the message. And the pattern can contain special characters. unlike "subject" search, this search won't suffer from <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=124641'>Bug 124641</a>.
 </p><p>This pattern must be the last pattern.
 </p></li><li><p>
 
@@ -105,6 +105,12 @@ date format can be checked <a href='https://developer.mozilla.org/en/JavaScript/
 </p>
 <p>This expression searches all messages in the current folder or view within the time range.
 af:(3:0 -4:0) will search for messages in current view that <i>date</i> between 3am to 4am EVERY day. 
+</p></li><li><p>
+
+<b>date:2011/01</b> or <b>date:2011/01/03</b> or <b>d:" 03:"</b> or in zh-CN locale <b>d:2011年3月</b>
+</p>
+<p>This expression searches all messages in the current folder or view to match date.
+The internal format for comparation is "yyyy/mm/dd hh:mm:ss", locale date is also supported.
 </p></li><li><p>
 
 <b>body:electric bill</b>
@@ -250,8 +256,10 @@ Version 0.2: Added 'g:' search mode for gloda search. Press 'Esc' in thread tree
 Version 0.1: First version, changed from GMailUI to make it works for Thunderbird 3.
 </li></ul>
 
-<h3>Known Issues of Thunderbird</h3>
+<h3>Known Issues of this extension or Thunderbird</h3>
 <ul><li>
+The "filename:" Search for filename/type in the attachement is experimental and may crash your Thunderbird.
+</li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=124641'>Bug 124641</a> - Thunderbird does not handle multi-line headers correctly when search term spans lines
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=224392'>Bug 224392</a> - Add ability to filter by attachment name (extension)
@@ -271,9 +279,11 @@ Ken Mixter - Original Author of GMailUI
 </li><li>
 savo_msu - Author of <a href='https://addons.mozilla.org/af/thunderbird/addon/one-click-search/'>One Click Search</a>
 </li><li>
-Olivier - Suggest for Shift/Ctrl+Enter
-</li><li>
 Kent James - Author of <a href='https://addons.mozilla.org/en-US/thunderbird/addon/filtaquilla/'>FiltaQuilla</a>
+</li><li>
+Greg Cowan - Suggest for date search
+</li><li>
+Olivier - Suggest for Shift/Ctrl+Enter
 </li><li>
 Tom Zhu - Suggest for Enter to focus message pane, and validations before release.
 </li></ul>
