minor changes for locale and help.

--- a/content/help.html
+++ b/content/help.html
@@ -237,9 +237,20 @@ Multiple matches are ORed. Example:
 Also common prefix like 'Re:', 'Fw:', [mail-list-name] will be removed before search.
 </p>
 
+<a name="version_history"></a>
 <h3>Version history</h3>
 <ul><li>
-Version 0.8: Work with Thunderbird 3.3. Added Click2Search similar to The Bat!
+Version 0.8: <ul>
+<li>Work with Thunderbird 3.3.</li>
+<li>Added Click2Search similar to The Bat!</li>
+<li>Added options to move expression search box to toolbar/menubar</li>
+<li>Added options to act as normal search box</li>
+<li>Added options to select 1st messages after hit enter in search box</li>
+<li>Hit enter will launch gloda search if no message found</li>
+<li>before/after search can now search time within day</li>
+<li>Added simple/regex/date search</li>
+<li>Added filename for attachment name/type search (experimental)</li>
+</ul>
 </li><li>
 Version 0.7: Added 'status/is' search. Added 'before/after' search. Added numerical calculation.
 </li><li>
