ctrl+b to focus

--- a/content/help.html
+++ b/content/help.html
@@ -247,6 +247,7 @@ Version 0.8: <ul>
 <li>Added options to act as normal search box</li>
 <li>Added options to select 1st messages after hit enter in search box</li>
 <li>Hit enter will launch gloda search if no message found</li>
+<li>Hit Ctrl+B will focus on search box</li>
 <li>before/after search can now search time within day</li>
 <li>Added simple/regex/date search</li>
 <li>Added filename for attachment name/type search (experimental)</li>
