--- a/content/help.html
+++ b/content/help.html
@@ -140,15 +140,15 @@ fields, and the <i>body</i>.
 
 <h3>Hot Key</h3>
 <p>
-By default, Press Ctrl+F, your cursor will appear in the quick search bar, and
-you will be able to type.
+By default, Press Ctrl+F, your cursor will appear in the expression search bar or in the "search in message" bar, depend on where current focus is, and
+you will be able to type. See <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=564328'>Bug 564328</a>.</p>
+<p>Expression Search add one additional hot key "Ctrl+B", this will only focus your cursor in the expression search bar.
 </p>
 <p>Once you are typing in your search query, and you hit enter or otherwise let
 it begin searching, your cursor will remain inside of the query box to allow you 
 to modify the query.  However, if you'd rather go back to browsing your messages,
 instead of clicking on the message headers in your search results, you can just
-press 'ESC' to refocus back to the message results, and press 'ESC' again to clear
-the search criteria.</p>
+press 'ESC' to to clear the search criteria, and press 'ESC' again to refocus back</p>
 
 <h3>Quick Search Virtual Folder</h3>
 <p>If you haven't before used 'virtual folders' in Thunderbird, let me introduce them.
