--- a/content/help.html
+++ b/content/help.html
@@ -309,6 +309,7 @@ Tom Zhu - Suggest for Enter to focus message pane, and validations before releas
 <li>Use J/K to move messages up and down, and Ctrl+J to mark a message as junk (conflict with builtin key mapping, use 'f/b' instead)</li>
 <li>Key '/' focuses on the quick search bar (use Ctrl+F)</li>
 </ul>
+If you do need to change the hotkeys, please look at <a href='http://kb.mozillazine.org/Keyconfig_extension'>Keyconfig extension</a>.
 </p>
 <br />
 </div> 
