add crash reports

--- a/content/help.html
+++ b/content/help.html
@@ -280,6 +280,8 @@ The "filename:" Search for filename/type in the attachement is experimental and 
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=564328'>Bug 564328</a> - Keyboard shortcut Ctrl+F conflict and cmd_find ambiguity, used for both Find in This Message and Quick Filter 
 </li><li>
+<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=564328'>Bug 600140</a> - 'Unread' quick filter hides some unread messages (the beginning of a thread) 
+</li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=607295'>Bug 607295</a> - Provide UI for new archive granularity and folder structure options
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=625472'>Bug 625472</a> - Quick search processes input after hiding it with escape
