minor doc changes

--- a/content/help.html
+++ b/content/help.html
@@ -281,12 +281,28 @@ The "filename:" Search for filename/type in the attachement is experimental and 
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=564328'>Bug 564328</a> - Keyboard shortcut Ctrl+F conflict and cmd_find ambiguity, used for both Find in This Message and Quick Filter 
 </li><li>
-<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=564328'>Bug 600140</a> - 'Unread' quick filter hides some unread messages (the beginning of a thread) 
+<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=600140'>Bug 600140</a> - 'Unread' quick filter hides some unread messages (the beginning of a thread) 
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=607295'>Bug 607295</a> - Provide UI for new archive granularity and folder structure options
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=625472'>Bug 625472</a> - Quick search processes input after hiding it with escape
 </li></ul>
+<p>Compared with original GMailUI 0.6, these features are still missing:
+<ul>
+<li>Use 'Y' to archive selected mail to archive folder (use 'a')</li>
+<li>Use J/K to move messages up and down, and Ctrl+J to mark a message as junk (conflict with builtin key mapping, use 'f/b' instead)</li>
+<li>Key '/' focuses on the quick search bar (use Ctrl+F)</li>
+</ul>
+If you do need to change the hotkeys, please try other extensions below.
+</p>
+
+<h3>Other Extensions</h3>
+You can try the following extensions to make your Thunderbird more convenient.<br/>
+<ul>
+<li><a href='https://addons.mozilla.org/en-US/thunderbird/addon/gmail-conversation-view/'>GMail Conversation View</a> and <a href='https://github.com/protz/GMail-Conversation-View/wiki/displaying-your-own-messages-in-the-inbox'>How to display sent messages in Inbox?</a></li>
+<li><a href='http://kb.mozillazine.org/Keyconfig_extension'>Keyconfig</a></li>
+<li><a href='https://addons.mozilla.org/en-US/thunderbird/addon/nostalgy/'>Nostalgy</a></li>
+</ul>
 
 <h3>Thanks</h3>
 <ul><li>
@@ -306,16 +322,6 @@ Tom Zhu - Suggest for Enter to focus message pane, and validations before releas
 <h3>Feedback, Suggestions, and on-going Development</h3>
 <p>Home Page: <a href='http://code.google.com/p/expression-search/'>expression-search</a>
 <p>Please send email to <a href='mailto:Opera.Wang+es@gmail.com'>Opera.Wang+es@gmail.com</a> for feedback, suggetions etc</p>
-<p>Compared with original GMailUI 0.6, these features are still missing:
-<ul>
-<li>Use 'Y' to archive selected mail to archive folder (use 'a')</li>
-<li>Use J/K to move messages up and down, and Ctrl+J to mark a message as junk (conflict with builtin key mapping, use 'f/b' instead)</li>
-<li>Key '/' focuses on the quick search bar (use Ctrl+F)</li>
-</ul>
-If you do need to change the hotkeys, please look at <a href='http://kb.mozillazine.org/Keyconfig_extension'>Keyconfig extension</a>.<br>
-Also <a href='https://addons.mozilla.org/en-US/thunderbird/addon/nostalgy/'>Nostalgy</a> is a good extension.
-</p>
-<br />
-</div> 
+</div>
 </body>
 </html>
