--- a/content/help.html
+++ b/content/help.html
@@ -241,6 +241,10 @@ Also common prefix like 'Re:', 'Fw:', [mail-list-name] will be removed before se
 <a name="version_history"></a>
 <h3>Version history</h3>
 <ul><li>
+Version 0.8.2: Work with Tunderbird 5. Fixed search bar shown issue. Fixed issue when search with complicate expressions.
+</li><li>
+Version 0.8.1: Fixed a bug: During search, 'Continue search with all folders' message will shown.
+</li><li>
 Version 0.8: <ul>
 <li>Work with Thunderbird 3.3.</li>
 <li>Added Click2Search similar to The Bat!</li>
@@ -315,6 +319,8 @@ Kent James - Author of <a href='https://addons.mozilla.org/en-US/thunderbird/add
 Greg Cowan - Suggest for date search
 </li><li>
 Olivier - Suggest for Shift/Ctrl+Enter
+</li><li>
+Randolf Ebelt - Find a bug when search with complicate expressions
 </li><li>
 Tom Zhu - Suggest for Enter to focus message pane, and validations before release.
 </li></ul>
