minor doc change

--- a/content/help.html
+++ b/content/help.html
@@ -10,6 +10,9 @@
   .notice {
     color: red;
   }
+  .bz_closed {
+    text-decoration: line-through;
+  }
 </style>
 </head>
 
@@ -241,7 +244,7 @@ Also common prefix like 'Re:', 'Fw:', [mail-list-name] will be removed before se
 <a name="version_history"></a>
 <h3>Version history</h3>
 <ul><li>
-Version 0.8.2: Work with Tunderbird 5. Fixed search bar shown issue. Fixed issue when search with complicate expressions.
+Version 0.8.2: Work with Tunderbird 5. Fixed search bar shown issue. Fixed issue when search with complicated expressions.
 </li><li>
 Version 0.8.1: Fixed a bug: During search, 'Continue search with all folders' message will shown.
 </li><li>
@@ -277,7 +280,7 @@ Version 0.1: First version, changed from GMailUI to make it works for Thunderbir
 <ul><li>
 The "filename:" Search for filename/type in the attachement is experimental and may crash your Thunderbird.
 </li><li>
-<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=124641'>Bug 124641</a> - Thunderbird does not handle multi-line headers correctly when search term spans lines
+<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=124641'><span class="bz_closed">Bug 124641</span></a> - Thunderbird does not handle multi-line headers correctly when search term spans lines
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=224392'>Bug 224392</a> - Add ability to filter by attachment name (extension)
 </li><li>
@@ -287,7 +290,7 @@ The "filename:" Search for filename/type in the attachement is experimental and 
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=600140'>Bug 600140</a> - 'Unread' quick filter hides some unread messages (the beginning of a thread) 
 </li><li>
-<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=607295'>Bug 607295</a> - Provide UI for new archive granularity and folder structure options
+<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=607295'><span class="bz_closed">Bug 607295</span></a> - Provide UI for new archive granularity and folder structure options
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=625472'>Bug 625472</a> - Quick search processes input after hiding it with escape
 </li></ul>
