move aop to modules and remove the dependency on jquery as load jQuery will make right click context menu missing.

--- a/content/help.html
+++ b/content/help.html
@@ -244,7 +244,9 @@ Also common prefix like 'Re:', 'Fw:', [mail-list-name] will be removed before se
 <a name="version_history"></a>
 <h3>Version history</h3>
 <ul><li>
-Version 0.8.2: Work with Tunderbird 5. Fixed search bar shown issue. Fixed issue when search with complicated expressions.
+Version 0.8.3: Fixed context menu missing issue when click right button.
+</li><li>
+Version 0.8.2: Work with Thunderbird 5. Fixed search bar shown issue. Fixed issue when search with complicated expressions.
 </li><li>
 Version 0.8.1: Fixed a bug: During search, 'Continue search with all folders' message will shown.
 </li><li>
@@ -287,6 +289,8 @@ The "filename:" Search for filename/type in the attachement is experimental and 
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=338761'>Bug 338761</a> - searching body of emails for text doesn't match word-wrapped text
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=564328'>Bug 564328</a> - Keyboard shortcut Ctrl+F conflict and cmd_find ambiguity, used for both Find in This Message and Quick Filter 
+</li><li>
+<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=570815'>Bug 570815</a> - (qfwidget) Make Quickfilter optionally available as simple searchbox widget+stickypin (with filter criteria in persistent popup panel &/or dropdown; toolbar customization)
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=600140'>Bug 600140</a> - 'Unread' quick filter hides some unread messages (the beginning of a thread) 
 </li><li>
