bugs list changed.

--- a/content/help.html
+++ b/content/help.html
@@ -288,15 +288,17 @@ The "filename:" Search for filename/type in the attachement is experimental and 
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=338761'>Bug 338761</a> - searching body of emails for text doesn't match word-wrapped text
 </li><li>
-<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=564328'>Bug 564328</a> - Keyboard shortcut Ctrl+F conflict and cmd_find ambiguity, used for both Find in This Message and Quick Filter 
+<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=546925'>Bug 546925</a> - custom header search is non-functional ('Run search on server' of Edit/Find/Search Messages doesn't work any more)
+</li><li>
+<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=564328'><span class="bz_closed">Bug 564328</span></a> - Keyboard shortcut Ctrl+F conflict and cmd_find ambiguity, used for both Find in This Message and Quick Filter 
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=570815'>Bug 570815</a> - (qfwidget) Make Quickfilter optionally available as simple searchbox widget+stickypin (with filter criteria in persistent popup panel &/or dropdown; toolbar customization)
 </li><li>
-<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=600140'>Bug 600140</a> - 'Unread' quick filter hides some unread messages (the beginning of a thread) 
+<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=600140'><span class="bz_closed">Bug 600140</span></a> - 'Unread' quick filter hides some unread messages (the beginning of a thread) 
 </li><li>
 <a href='https://bugzilla.mozilla.org/show_bug.cgi?id=607295'><span class="bz_closed">Bug 607295</span></a> - Provide UI for new archive granularity and folder structure options
 </li><li>
-<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=625472'>Bug 625472</a> - Quick search processes input after hiding it with escape
+<a href='https://bugzilla.mozilla.org/show_bug.cgi?id=625472'><span class="bz_closed">Bug 625472</span></a> - Quick search processes input after hiding it with escape
 </li></ul>
 <p>Compared with original GMailUI 0.6, these features are still missing:
 <ul>
